Correção do nome AuthenticadedRequest para AuthenticatedRequest e adição do progresso de um episódio

--- a/public/video.html
+++ b/public/video.html
@@ -16,7 +16,7 @@
     -->
     <video id="videoplayer" controls>
       <source
-        src="/episodes/stream?videoUrl=videos/course-1/Desktop 04-07-2023 20-14-44.mp4&token="
+        src="/episodes/stream?videoUrl=videos/course-1/Desktop 04-07-2023 20-14-44.mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiZmlyc3ROYW1lIjoiWWFuIiwiZW1haWwiOiJmYWJpb3lhbjJAZ21haWwuY29tIiwiaWF0IjoxNzA1NzczODM2LCJleHAiOjE3MDYzNzg2MzZ9.cwQ8NCkRxGt8YaZpP6QnVwRRPS4eikwPf10g7d-5MjE"
         type="video/mp4"
       />
     </video>
